--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "glace-web",
-  "version": "1.0.2",
-  "description": "",
+  "version": "1.0.3",
+  "description": "GlaceJS Web plugin",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,12 +10,12 @@
     "type": "git",
     "url": "git+https://github.com/glacejs/glace-web.git"
   },
-  "author": "Sergei Chipiga",
+  "author": "Sergei Chipiga <chipiga86@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/glacejs/glace-web/issues"
   },
-  "homepage": "https://glacejs.github.com/glace-web",
+  "homepage": "https://glacejs.github.io/glace-web",
   "engines": {
     "node": ">= 8.9",
     "npm": ">= 5.5"
