--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "npm": ">=5.5"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "cross-spawn": "^5.1.0",
     "glace-core": "^1.0.4",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "ink-docstrap": "^1.3.0",
-    "jsdoc-strip-async-await": "^0.1.0"
+    "jsdoc-strip-async-await": "^0.1.0",
+    "sinon": "^4.1.3"
   },
   "files": [
     "lib"
   ],
   "dependencies": {
-    "chai": "^4.1.2",
     "glace-utils": "^1.0.1",
     "lodash": "^4.17.4",
     "selenium-standalone": "^6.11.0",
