--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "npm": ">=5.5"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
     "cross-spawn": "^5.1.0",
-    "glace-core": "^1.0.4",
+    "glace-core": "^1.0.6",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "ink-docstrap": "^1.3.0",
-    "jsdoc-strip-async-await": "^0.1.0",
-    "sinon": "^4.1.3"
+    "jsdoc-strip-async-await": "^0.1.0"
   },
   "files": [
     "lib"
