--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "GlaceJS Web plugin",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ci": "npm run lint && npm run test:unit",
+    "docs": "rm -rf docs && jsdoc -c jsdoc.json -d docs",
+    "docs:publish": "npm run docs && git add docs && git commit -m \"update docs\" && git push origin master",
+    "lint": "eslint lib tests",
+    "lint:fix": "npm run lint -- --fix",
+    "test": "npm run lint && npm run test:unit && npm run test:e2e",
+    "test:unit": "nyc ./tests/run tests/unit",
+    "test:cover": "nyc --reporter=lcov ./tests/run tests/unit",
+    "test:commit": "./tests/run tests/unit",
+    "test:e2e": "./tests/run tests/e2e"
   },
+  "pre-commit": [
+    "lint",
+    "test:commit"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/glacejs/glace-web.git"
@@ -21,12 +34,13 @@
     "npm": ">=5.5"
   },
   "devDependencies": {
-    "cross-spawn": "^5.1.0",
+    "eslint": "^4.19.1",
     "glace-core": "^1.3.8",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
     "ink-docstrap": "^1.3.0",
-    "jsdoc-strip-async-await": "^0.1.0"
+    "jsdoc": "^3.5.5",
+    "jsdoc-strip-async-await": "^0.1.0",
+    "nyc": "^11.6.0",
+    "pre-commit": "^1.2.2"
   },
   "files": [
     "lib"
