--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai": "^4.1.2",
     "glace-utils": "^1.1.7",
     "lodash": "^4.17.5",
+    "logfmt": "^1.2.0",
     "selenium-standalone": "^6.13.0",
     "weak": "^1.0.1",
     "webdriverio": "^4.12.0"
