--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glace-web",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "description": "GlaceJS Web plugin",
   "main": "lib/index.js",
   "scripts": {
@@ -41,26 +41,26 @@
     "npm": ">=5.5"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "glace-core": "^1.8.7",
+    "eslint": "^5.8.0",
+    "glace-core": "^1.8.8",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.5.5",
     "jsdoc-strip-async-await": "^0.1.0",
-    "nyc": "^11.9.0",
+    "nyc": "^13.1.0",
     "pre-commit": "^1.2.2"
   },
   "files": [
     "lib"
   ],
   "dependencies": {
-    "chai": "^4.2.0",
-    "get-port": "^4.0.0",
-    "glace-utils": "^1.2.9",
-    "lodash": "^4.17.11",
-    "logfmt": "^1.2.1",
-    "selenium-standalone": "^6.15.3",
-    "uuid": "^3.3.2",
-    "weak": "^1.0.1",
-    "webdriverio": "^4.14.0"
+    "chai": "4.2.0",
+    "get-port": "4.0.0",
+    "glace-utils": "1.3.0",
+    "lodash": "4.17.11",
+    "logfmt": "1.2.1",
+    "selenium-standalone": "6.15.3",
+    "uuid": "3.3.2",
+    "weak": "1.0.1",
+    "webdriverio": "4.14.0"
   }
 }
